tests/error/comptime/check_inplace_construct2.bz
// error: invalid construction of an object of type 'i32'
// note: while evaluating expression at compile time
// note: address points to an object that is not on the heap
// note: address points to this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		mut i = 0;
		__builtin_inplace_construct(&i, 0);
	});
}
